--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Pomodoro</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="data:,">
 </head>
 <body>
     <div class="pomodoro">
